// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Fade" animation test suite "FadeComp" should match snapshot 1`] = `
.c0 {
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  -webkit-transform: scale( 1 );
  -ms-transform: scale( 1 );
  transform: scale( 1 );
  opacity: 1;
}

<div
  className="c0"
/>
`;

exports[`"Fade" animation test suite "FadeTransition" should match snapshot 1`] = `
.c0 {
  -webkit-transition: all 100ms ease-in-out;
  transition: all 100ms ease-in-out;
  -webkit-transform: scale( 0.2 );
  -ms-transform: scale( 0.2 );
  transform: scale( 0.2 );
  opacity: 0;
}

<div
  className="c0"
/>
`;
